[TIMOB-17200] Fixed a bunch of bugs with Date and Time based Picker on Mobile Web. Turned off the border on the date/time input field since we already had one. Fixed change event so that it actually fires when the value changes and only when the value is a valid date object. Fixed the 'source' of the change event to be the actual Picker object. Fixed bug where widget-id was displaying as undefined.

--- a/mobileweb/themes/common.css
+++ b/mobileweb/themes/common.css
@@ -369,6 +369,10 @@ textarea {
 	border: 1px solid #666;
 }
 
+.TiUIPicker input {
+	border: none;
+}
+
 .TiUIProgressBarIndicator {
 	background-color: #ccc;
 }
